<resources>

    <string name="app_name">HateID</string>
    <string name="Neighbourhood_Dispute_Result">If, in your judgement, the client has not been victimised by hate, but by a neighbourhood dispute, please see <a href="https://www.northumbria.police.uk/advice/advice-and-information/asb/asb/antisocial-behaviour/disputes-with-neighbours"><font fgcolor="#ff68246D">Northumbria Police guidance</font></a> to give appropriate advice.</string>

    <string name="Anti_Social_Behaviour_Result">If, in your judgement, the client has not been victimised by hate, but by anti-social behaviour, please refer them to your <a href="https://www.northumbria.police.uk/ro/report/asb/asb-v3/report-antisocial-behaviour/"><font fgcolor="#ff68246D">ASB team</font></a>.</string>

    <string name="Crime_Result">If, in your judgement, the client is in danger/at risk and or the victim of a crime encourage them to <a href="https://www.northumbria.police.uk/ro/report/ocr/af/how-to-report-a-crime/"><font fgcolor="#ff68246D" />CONTACT THE POLICE</a></string>

    <string name="Crime_Hate_Result">If, in your judgement, the client is in danger/at risk and or the victim of a crime that is motivated by hate then encourage them to <a href="https://www.northumbria.police.uk/advice/advice-and-information/hco/hate-crime/how-to-report-hate-crime/"><font fgcolor="#ff68246D">CONTACT THE POLICE and REPORT A HATE CRIME.</font></a></string>

    <string name="Non_Crime_Incident_Result">If, in your judgement, the client is in danger/at risk and or the victim of a non-crime incident that is motivated by hate then encourage them to <a href="https://www.northumbria.police.uk/advice/advice-and-information/hco/hate-crime/how-to-report-hate-crime/"><font fgcolor="#ff68246D">CONTACT THE POLICE and REPORT A HATE INCIDENT.</font></a>\n\nIf, in your judgment, the client is the victim of a non-crime incident then please refer them to <a href="https://hcasni.com/referral-form/"><font fgcolor="#ff68246D">CONNECTED VOICE HATE CRIME ADVOCACY SERVICE (HCAS).</font></a></string>

    <string name="Mate_Crime_Hate_Result">If, in your judgement, the client is in danger/at risk and or the victim of a mate crime/Hate relationship that is motivated by hate then encourage them to <a href="https://www.northumbria.police.uk/advice/advice-and-information/hco/hate-crime/how-to-report-hate-crime/"><font fgcolor="#ff68246D">CONTACT THE POLICE and REPORT A HATE CRIME.</font></a>\n\n\n\nIf, the client has been victimised by mate crime, please refer them to ADULT SERVICES: \n\n<a href="https://www.northumberland.gov.uk/Care/safeguarding.aspx"><font fgcolor="#ff68246D">Northumberland</font></a> \n\n<a href="https://www.livingwellnorthtyneside.co.uk/services/695"><font fgcolor="#ff68246D">North Tyneside</font></a> \n\n<a href="https://www.southtyneside.gov.uk/article/13750/How-to-report-a-concern"><font fgcolor="#ff68246D">South Tyneside</font></a> \n\n<a href="https://www.informationnow.org.uk/organisation/newcastle-safeguarding-adults-board/#"><font fgcolor="#ff68246D">Newcastle</font></a> \n\n<a href="https://www.gateshead.gov.uk/article/22071/Adult-safeguarding"><font fgcolor="#ff68246D">Gateshead</font></a> \n\n<a href="https://www.sunderland.gov.uk/article/14085/What-is-safeguarding"><font fgcolor="#ff68246D">Sunderland</font></a>\n\n\nIf, in your judgment, the client is also/or in need of emotional and/or practical support for mate crime they have experienced, please refer to the <a href="https://hcasni.com/referral-form/"><font fgcolor="#ff68246D">CONNECTED VOICE HATE CRIME ADVOCACY SERVICE (HCAS).</font></a></string>

    <string name="Mate_Non_Crime_Hate_Result">If, in your judgement, the client is in danger/at risk and or the victim of a mate-related/Hate relationship non-crime incident that is motivated by hate then encourage them to <a href="https://www.northumbria.police.uk/advice/advice-and-information/hco/hate-crime/how-to-report-hate-crime/"><font fgcolor="#ff68246D">CONTACT THE POLICE and REPORT A HATE INCIDENT.</font></a>\n\nIf, the client has been victimised by a mate-related non-crime incident, please refer them to ADULT SERVICES: \n\n<a href="https://www.northumberland.gov.uk/Care/safeguarding.aspx"><font fgcolor="#ff68246D">Northumberland</font></a> \n\n<a href="https://www.livingwellnorthtyneside.co.uk/services/695"><font fgcolor="#ff68246D">North Tyneside</font></a> \n\n<a href="https://www.southtyneside.gov.uk/article/13750/How-to-report-a-concern"><font fgcolor="#ff68246D">South Tyneside</font></a> \n\n<a href="https://www.informationnow.org.uk/organisation/newcastle-safeguarding-adults-board/#"><font fgcolor="#ff68246D">Newcastle</font></a> \n\n<a href="https://www.gateshead.gov.uk/article/22071/Adult-safeguarding"><font fgcolor="#ff68246D">Gateshead</font></a> \n\n<a href="https://www.sunderland.gov.uk/article/14085/What-is-safeguarding"><font fgcolor="#ff68246D">Sunderland</font></a>\n\nIf, in your judgment, the client is also/or in need of emotional and/or practical support for a mate-related non-crime incident they have experienced, please refer to the <a href="https://hcasni.com/referral-form/"><font fgcolor="#ff68246D">CONNECTED VOICE HATE CRIME ADVOCACY SERVICE (HCAS).</font></a></string>

    <string name="Hate_Relationship_Crime_Result">If, in your judgement, the client is in danger/at risk and or the victim of a hate relationship then encourage them to <a href="https://www.northumbria.police.uk/advice/advice-and-information/hco/hate-crime/how-to-report-hate-crime/"><font fgcolor="#ff68246D">CONTACT THE POLICE and REPORT A HATE CRIME.</font></a>\n\nIf, in your judgment, the client is the victim of a hate relationship [including a crime] then please refer them to <a href="https://hcasni.com/referral-form/"><font fgcolor="#ff68246D">CONNECTED VOICE HATE CRIME ADVOCACY SERVICE (HCAS).</font></a></string>

    <string name="Hate_Relationship_Non_crime_Result">If, in your judgment, the client is the victim of a hate relationship [including only non-crime incidents] then please refer them to <a href="https://hcasni.com/referral-form/"><font fgcolor="#ff68246D">CONNECTED VOICE HATE CRIME ADVOCACY SERVICE (HCAS).</font></a></string>

    <string name="Client_Crime">Does the client believe this is a <font fgcolor="#ff68246D">crime</font>?</string>

    <string name="Police_Protocol">- <a href="https://www.college.police.uk/app/major-investigation-and-public-protection/hate-crime/responding-hate"><font color="#68246D">Police</font></a></string>

    <string name="Social_Housing_Protocol">- <a href="https://assets.publishing.service.gov.uk/media/6181282ae90e07198018fa85/Help_for_social_housing_tenants_when_faced_with_anti-social_behaviour.pdf"><font color="#68246D">Social Housing</font></a></string>

    <string name="Social_Work_Protocol">- <a href="https://www.communitycare.co.uk/2015/02/05/social-care-role-preventing-hate-crime-just-criminal-justice-issue/"><font color="#68246D">Social Work</font></a></string>

    <string name="Education_Protocol">- <a href="https://www.nasuwt.org.uk/advice/equalities/equalities-advice/hate-crime.html"><font color="#68246D">Education</font></a></string>

    <string name="Connect_Voice_weblink">To find more information regarding Connected voice and the work they do plase visit: <a href="https://connectedvoice.org.uk/services/advocacy"><font fgcolor="#ff68246D">https://connectedvoice.org.uk/services/advocacy</font></a></string>
    <string name="title_activity_landing_page">LandingPage</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>


    <string name="title_activity_description_page">DescriptionPage</string>


    <!--    <string name="Hate_Crime_And_Hate_Relationship_Result">If, in your judgement, the client is in danger/at risk and or the victim of a crime that is motivated by hate as well as a victim of a hate relationship then encourage them to <a href = "https://www.northumbria.police.uk/advice/advice-and-information/hco/hate-crime/how-to-report-hate-crime/"><font colour = "@color/purple">CONTACT THE POLICE and REPORT A HATE CRIME.</font></a>\n\nIf, in your judgment, the client is the victim of a hate relationship [including a crime] then please refer them to <a href = "https://hcasni.com/referral-form/"><font colour = "@color/purple">CONNECTED VOICE HATE CRIME ADVOCACY SERVICE (HCAS).</font></a></string>-->

    <!--    <string name="Hate_Incident_And_Hate_Relationship_Result">If, in your judgement, the client is in danger/at risk and or the victim of a non-crime incident that is motivated by hate then encourage them to <a href = "https://www.northumbria.police.uk/advice/advice-and-information/hco/hate-crime/how-to-report-hate-crime/"><font colour = "@color/purple">RING THE POLICE and REPORT A HATE INCIDENT.</font></a>\n\nIf, in your judgment, the client is the victim of a non-crime incident as well as the victim of a hate relationship then please refer them to <a href = "https://hcasni.com/referral-form/"><font colour = "@color/purple">CONNECTED VOICE HATE CRIME ADVOCACY SERVICE (HCAS).</font></a></string>-->

</resources>